[project]
name = "dockerclustermon"
version = "0.1.3"
description = "A CLI tool for a live view of your docker containers running on a remote server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.8.1",
    "typer>=0.12.5",
]

[project.scripts]
ds = "dockerclustermon:run_live_status"
dockerstatus = "dockerclustermon:run_live_status"
