[project]
name = "dockerclustermon"
version = "0.2.0"
description = "A CLI tool for a live view of your docker containers running on a remote server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.9.4",
    "typer>=0.13.1",
]

[project.scripts]
ds = "dockerclustermon:run_live_status"
dockerstatus = "dockerclustermon:run_live_status"


[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
packages = ["dockerclustermon"]
exclude = [
    "/.github",
    "/dist",
    "/tests",
    "/example",
    "/readme_resources",
    "/venv",
    "/.venv",
    "tox.ini",
    "uv.lock",
    "ruff.toml",
    "requirements-dev.txt",
    "settings.json",
]

[tool.hatch.build.targets.wheel]
packages = ["dockerclustermon"]
exclude = [
    "/.github",
    "/dist",
    "/tests",
    "/example",
    "/venv",
    "/readme_resources",
    "/.venv",
    "tox.ini",
    "uv.lock",
    "ruff.toml",
    "requirements-dev.txt",
    "settings.json",
]
